--- a/src/main/resources/com/virusoft/orangehrm/fxml/admin-content-view.fxml
+++ b/src/main/resources/com/virusoft/orangehrm/fxml/admin-content-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.virusoft.orangehrm.fxml.admin.pane.content.AdminContentView"
+            fx:controller="com.virusoft.orangehrm.controllers.AdminContentController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
