--- a/src/main/resources/com/virusoft/orangehrm/fxml/admin-menu-view.fxml
+++ b/src/main/resources/com/virusoft/orangehrm/fxml/admin-menu-view.fxml
@@ -1,118 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<AnchorPane prefHeight="50.0" prefWidth="1061.0" xmlns="http://javafx.com/javafx/20.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.orangehrm.controllers.AdminMenuController">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="1061.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.orangehrm.controllers.AdminMenuController">
     <children>
-        <Label fx:id="menu1RoundedLabel" layoutX="51.0" layoutY="10.0" opacity="0.4" prefHeight="14.0" prefWidth="140.0"
-               style="-fx-background-color: ff7b1d;" textFill="WHITE">
+        <Label fx:id="menu1RoundedLabel" layoutX="51.0" layoutY="8.0" opacity="0.4" prefHeight="35.0" prefWidth="142.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="51.0" AnchorPane.topAnchor="8.0">
             <font>
-                <Font size="23.0"/>
+                <Font size="23.0" />
             </font>
         </Label>
-        <MenuButton fx:id="userManagementMenuButton" contentDisplay="RIGHT" layoutX="60.0" layoutY="13.0"
-                    mnemonicParsing="false" prefHeight="24.0" prefWidth="123.0" text="User Management"
-                    textFill="#ff7b1d" underline="true">
+        <MenuButton fx:id="userManagementMenuButton" contentDisplay="RIGHT" layoutX="62.0" layoutY="13.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="123.0" text="User Management" textFill="#e86006" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="62.0" AnchorPane.topAnchor="13.0">
             <font>
-                <Font size="10.0"/>
+                <Font size="10.0" />
             </font>
             <items>
-                <MenuItem mnemonicParsing="false" text="User"/>
+                <MenuItem mnemonicParsing="false" text="Users" />
             </items>
         </MenuButton>
-        <Label fx:id="menu2RoundedLabel" layoutX="213.0" layoutY="10.0" opacity="0.4" prefHeight="20.0" prefWidth="70.0"
-               style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="11.0"
-               AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="10.0">
+        <Label fx:id="menu2RoundedLabel" layoutX="212.0" layoutY="8.0" opacity="0.4" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="212.0" AnchorPane.topAnchor="8.0">
             <font>
-                <Font size="23.0"/>
+                <Font size="23.0" />
             </font>
         </Label>
-        <MenuButton fx:id="jobMenuButton" contentDisplay="RIGHT" layoutX="222.0" layoutY="13.0" mnemonicParsing="false"
-                    prefHeight="24.0" prefWidth="51.0" text="Job" textFill="#ff7b1d" underline="true"
-                    AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="222.0" AnchorPane.topAnchor="13.0">
+        <MenuButton fx:id="jobMenuButton" contentDisplay="RIGHT" layoutX="223.0" layoutY="13.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="49.0" text="Job" textFill="#e86006" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="223.0" AnchorPane.topAnchor="13.0">
             <font>
-                <Font size="10.0"/>
+                <Font size="10.0" />
             </font>
             <items>
-                <MenuItem mnemonicParsing="false" text="Job Titles"/>
-                <MenuItem mnemonicParsing="false" text="Pay Grades"/>
-                <MenuItem mnemonicParsing="false" text="Employment Status"/>
-                <MenuItem mnemonicParsing="false" text="Job Categories"/>
-                <MenuItem mnemonicParsing="false" text="Work Shifts"/>
+                <MenuItem mnemonicParsing="false" text="Job Titles" />
+                <MenuItem mnemonicParsing="false" text="Pay Grades" />
+                <MenuItem mnemonicParsing="false" text="Employment Status" />
+                <MenuItem mnemonicParsing="false" text="Job Categories" />
+                <MenuItem mnemonicParsing="false" text="Work Shifts" />
             </items>
         </MenuButton>
-        <Label fx:id="menu3RoundedLabel" layoutX="303.0" layoutY="10.0" opacity="0.4" prefHeight="20.0"
-               prefWidth="120.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="11.0"
-               AnchorPane.leftAnchor="303.0" AnchorPane.topAnchor="10.0">
+        <Label fx:id="menu3RoundedLabel" layoutX="300.0" layoutY="8.0" opacity="0.4" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="8.0">
             <font>
-                <Font size="23.0"/>
+                <Font size="23.0" />
             </font>
         </Label>
-        <MenuButton fx:id="organizationMenuButton" contentDisplay="RIGHT" layoutX="313.0" layoutY="13.0"
-                    mnemonicParsing="false" prefHeight="24.0" prefWidth="100.0" text="Organization" textFill="#ff7b1d"
-                    underline="true" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="313.0"
-                    AnchorPane.topAnchor="13.0">
+        <MenuButton fx:id="organizationMenuButton" contentDisplay="RIGHT" layoutX="309.0" layoutY="13.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="96.0" text="Organization" textFill="#e86006" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="309.0" AnchorPane.topAnchor="13.0">
             <font>
-                <Font size="10.0"/>
+                <Font size="10.0" />
             </font>
             <items>
-                <MenuItem mnemonicParsing="false" text="General Information"/>
-                <MenuItem mnemonicParsing="false" text="Locations"/>
-                <MenuItem mnemonicParsing="false" text="Structure"/>
+                <MenuItem mnemonicParsing="false" text="General Information" />
+                <MenuItem mnemonicParsing="false" text="Locations" />
+                <MenuItem mnemonicParsing="false" text="Structure" />
             </items>
         </MenuButton>
-        <Label fx:id="menu4RoundedLabel" layoutX="442.0" layoutY="10.0" opacity="0.4" prefHeight="20.0"
-               prefWidth="118.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="11.0"
-               AnchorPane.leftAnchor="442.0" AnchorPane.topAnchor="10.0">
+        <Label fx:id="menu4RoundedLabel" layoutX="431.0" layoutY="8.0" opacity="0.4" prefHeight="35.0" prefWidth="123.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="431.0" AnchorPane.topAnchor="8.0">
             <font>
-                <Font size="23.0"/>
+                <Font size="23.0" />
             </font>
         </Label>
-        <MenuButton fx:id="qualificationMenuButton" contentDisplay="RIGHT" layoutX="450.0" layoutY="13.0"
-                    mnemonicParsing="false" prefHeight="24.0" prefWidth="100.0" text="Qualifications" textFill="#ff7b1d"
-                    underline="true" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="450.0"
-                    AnchorPane.topAnchor="13.0">
+        <MenuButton fx:id="qualificationMenuButton" contentDisplay="RIGHT" layoutX="442.0" layoutY="13.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="102.0" text="Qualifications" textFill="#e86006" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="442.0" AnchorPane.topAnchor="13.0">
             <font>
-                <Font size="10.0"/>
+                <Font size="10.0" />
             </font>
             <items>
-                <MenuItem mnemonicParsing="false" text="Skills"/>
-                <MenuItem mnemonicParsing="false" text="Education"/>
-                <MenuItem mnemonicParsing="false" text="Licenses"/>
-                <MenuItem mnemonicParsing="false" text="Languages"/>
-                <MenuItem mnemonicParsing="false" text="Membership"/>
+                <MenuItem mnemonicParsing="false" text="Skills" />
+                <MenuItem mnemonicParsing="false" text="Education" />
+                <MenuItem mnemonicParsing="false" text="Licenses" />
+                <MenuItem mnemonicParsing="false" text="Languages" />
+                <MenuItem mnemonicParsing="false" text="Membership" />
             </items>
         </MenuButton>
-        <ImageView fx:id="informationLabelClickable" fitHeight="16.0" fitWidth="51.0" layoutX="1036.0" layoutY="18.0"
-                   pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="7.956521987915039">
+        <ImageView fx:id="userImageView1" fitHeight="16.0" fitWidth="51.0" layoutX="1036.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="7.956521987915039">
             <image>
-                <Image url="@../images/icon-qm.png"/>
+                <Image url="@../images/icon-qm.png" />
             </image>
         </ImageView>
-        <Label fx:id="menu5RoundedLabel" layoutX="578.0" layoutY="10.0" opacity="0.4" prefHeight="20.0"
-               prefWidth="118.0" style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="11.0"
-               AnchorPane.leftAnchor="578.0" AnchorPane.topAnchor="10.0">
+        <Label fx:id="menu5RoundedLabel" layoutX="569.0" layoutY="8.0" opacity="0.4" prefHeight="35.0" prefWidth="123.0" style="-fx-background-color: ff7b1d;" textFill="WHITE">
             <font>
-                <Font size="23.0"/>
+                <Font size="23.0" />
             </font>
         </Label>
-        <MenuButton fx:id="configurationMenuButton" contentDisplay="RIGHT" layoutX="587.0" layoutY="13.0"
-                    mnemonicParsing="false" prefHeight="24.0" prefWidth="100.0" text="Configuration" textFill="#ff7b1d"
-                    underline="true" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="587.0"
-                    AnchorPane.topAnchor="13.0">
+        <MenuButton fx:id="configurationMenuButton" contentDisplay="RIGHT" layoutX="579.0" layoutY="13.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="102.0" text="Configuration" textFill="#e86006">
             <font>
-                <Font size="10.0"/>
+                <Font size="10.0" />
             </font>
             <items>
-                <MenuItem mnemonicParsing="false" text="Nationalities"/>
-                <MenuItem mnemonicParsing="false" text="Corporate Branding"/>
+                <MenuItem mnemonicParsing="false" text="Nationalities" />
+                <MenuItem mnemonicParsing="false" text="Corporate Branding" />
             </items>
         </MenuButton>
-        <Pane layoutX="51.0" layoutY="15.0" prefHeight="20.0" prefWidth="140.0" AnchorPane.bottomAnchor="15.0"
-              AnchorPane.leftAnchor="51.0" AnchorPane.topAnchor="15.0"/>
     </children>
 </AnchorPane>
