--- a/src/main/resources/com/virusoft/lemonhrm/fxml/dashboard-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/fxml/dashboard-view.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
@@ -25,7 +25,7 @@
                 </Label>
                 <Pane layoutY="-1.0" prefHeight="75.0" prefWidth="204.0" style="-fx-background-color: white;">
                     <children>
-                        <ImageView fitHeight="55.0" fitWidth="195.0" layoutX="8.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="55.0" fitWidth="195.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../images/icon-banner.png" />
                             </image>
@@ -53,11 +53,6 @@
     <left>
         <AnchorPane fx:id="leftSideAnchorPane" prefHeight="643.0" prefWidth="204.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
             <children>
-                <ImageView fitHeight="97.0" fitWidth="181.0" layoutX="12.0" layoutY="484.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="4.912239074707031" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="11.0">
-                    <image>
-                        <Image url="@../images/icon-banner.png" />
-                    </image>
-                </ImageView>
                 <fx:include fx:id="adminUserNavbar" source="admin-user-navbar-view.fxml" AnchorPane.bottomAnchor="58.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
             <effect>
@@ -74,13 +69,24 @@
         <AnchorPane prefHeight="182.0" prefWidth="15.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
     </right>
     <bottom>
-        <AnchorPane prefHeight="24.0" prefWidth="1280.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
+        <AnchorPane prefHeight="24.0" prefWidth="1280.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="37.0" fitWidth="146.0" layoutX="44.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="1.0">
+               <image>
+                  <Image url="@../images/icon-banner.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
     </bottom>
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
-                <StackPane fx:id="contentMenuStackPane" prefHeight="50.0" prefWidth="1061.0" style="-fx-background-color: white;" />
-                <AnchorPane fx:id="contentAnchorPane" prefHeight="496.0" prefWidth="1061.0">
+            <HBox prefHeight="50.0" prefWidth="1061.0">
+               <children>
+                  <AnchorPane fx:id="contentMenuAnchorPane" prefHeight="50.0" prefWidth="1061.0" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+                <AnchorPane fx:id="contentAnchorPane" prefHeight="496.0" prefWidth="1061.0" VBox.vgrow="ALWAYS">
                     <children>
                         <ScrollPane fx:id="contentScrollPane" prefHeight="495.0" prefWidth="1061.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                     </children>
