--- a/src/main/resources/com/virusoft/lemonhrm/fxml/dashboard-menu-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/fxml/dashboard-menu-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane prefHeight="50.0" prefWidth="1061.0" xmlns="http://javafx.com/javafx/20.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.virusoft.lemonhrm.controllers.DashboardContentMenuController">
+            fx:controller="com.virusoft.lemonhrm.controllers.DashboardMenuController">
     <children>
         <ImageView fx:id="userImageView1" fitHeight="16.0" fitWidth="51.0" layoutX="1036.0" layoutY="18.0"
                    pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="7.956521987915039">
