reorganizing my project structure and many more...

--- a/src/main/resources/com/virusoft/lemonhrm/views/admin-content-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/views/admin-content-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.virusoft.lemonhrm.views.PimContentController"
+            fx:controller="com.virusoft.lemonhrm.viewcontrollers.AdminContentController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
