--- a/src/main/resources/com/virusoft/lemonhrm/views/dashboard-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/views/dashboard-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="dashboardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.views.DashboardController">
+<BorderPane fx:id="dashboardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.viewcontrollers.DashboardController">
     <top>
         <AnchorPane prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: ff7b1d;" BorderPane.alignment="CENTER">
             <children>
@@ -27,7 +27,7 @@
                     <children>
                         <ImageView fitHeight="55.0" fitWidth="230.0" layoutX="39.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-banner.png" />
+                                <Image url="@../images/icon-banner.png" />
                             </image>
                         </ImageView>
                     </children>
@@ -39,7 +39,7 @@
                 </Label>
                 <ImageView fx:id="userImageView" fitHeight="29.0" fitWidth="29.0" layoutX="1074.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="177.0">
                     <image>
-                        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-user.png" />
+                        <Image url="@../images/icon-user.png" />
                     </image>
                 </ImageView>
                 <MenuButton fx:id="usernameMenuButton" contentDisplay="RIGHT" layoutX="1105.0" layoutY="25.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="139.0" text="Wilson A. Limbago Jr." textFill="WHITE" underline="true" AnchorPane.rightAnchor="36.0">
@@ -73,7 +73,7 @@
             <children>
                 <ImageView fitHeight="37.0" fitWidth="146.0" layoutX="60.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="1.0">
                     <image>
-                        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-banner.png" />
+                        <Image url="@../images/icon-banner.png" />
                     </image>
                 </ImageView>
             </children>
